AD-2004-01-21-1: Bugfix:   Handling of 'SGE_DEBUG_TARGET' env var was broken
                 Changed:  rmon

AD-2004-01-21-0: Enhancem: - 'sge_qmaster' does now handle 'SIGTERM'.
                           - overwork of signal handling.
                 Changed:  qmaster

AA-2004-01-21-0: Enhancem. qmon cluster queue changes, NOT YET COMPLETED
                           to get the rest of qmon functionality operable
                           again (indexes for lists changed with the intro
                           of cluster queues)
                 Changed:  all, sge_attr.c, sge_object.c

JG-2004-01-21-0: Bugfix:   Categories (job requests) were truncated in the 
                           accounting and the reporting file.
                           Fixed build for solaris86.
                 Changed:  sge_qmaster
                 Review:   pending

EB-2004-01-21-1: Bugfix:   Handled TODO-Sections concernings CQs
                 Changed:  sge_schedd

EB-2004-01-21-0: Bugfix:   Queue selection did not work in combination
                           with cluster queue printing (qstat -g c -q <QI>)
                 Changed:  qstat

RC-2004-01-20-0: Enhancem.: use sysconf(_SC_NPROCESSORS_ONLN) to get nprocs on 
                            Linux.
                 Changed:   libs/uti/sge_nprocs.c

CR-2004-01-20-1: Enhancem.: communication lib: status information response
                            message reports application status. 
                 Changed:   ngc lib

JM-2004-01-20-3: Bugfix:    The aimk configurations for AIX4[123] and AIX51
                            are changed to use CC=xlc_r and CXX=xlC_r.
                            SHAREDLD (for AIX51) is also set to 'xlc_r'.
                 Changed:   aimk
                 Reviewed:  RH, AS

JM-2004-01-20-2: Bugfix:    The setrlimitj() call under SUPER-UX must be 
                            surrounded by sge_switch2start_user() and 
                            sge_switch2admin_user() to be effective.